# mokitul-api

./: .gitignore  Dockerfile  Notice.md  README.md  Taskfile.yaml  agents-test.py  compose.yaml  dev-db.docker-compose.yaml  llama2_paper.md  pyproject.toml  requirements.txt  start_applicatoin.sh  test_pdf.py
.devcontainer/: devcontainer.json
demos/: test.py  test2.py  test3.py  test4.py  test5.py  test6.py  testapi.py
docs/: api_doc.md  configuration_doc.md  structure_doc.md
src/: application_startup.py  definitions.py  main.py
src/api/: .env  app.py  chat_engine.py  database.py  error_handler.py  model.py  settings.py  storage.py
src/api/routes/: moodle.py
src/api/routes/v1/: conversations.py
src/api/utils/: chains.py  downloads.py  function_tools.py
src/config/: config_loader.py
src/core/: __init__.py  request_timer.py  settings.py  singelton.py
src/database/: database_build.py  implementation.py  session.py
src/moodle/: downloads.py
src/pdf_converter/: pdf_converter.py
src/usecases/: ask_llm.py  conversation_usecases.py  convert_pdf_to_markdown.py  download_file_from_moodle.py  vector_db.py
src/usecases/llm/: __init__.py  init_index.py  llama_index_rag_llm.py
src/usecases/model/: dto.py
src/usecases/storage/: __init__.py
src/vector_database/: vectore_store.py
tests/: api.py  database_tests.py  document_splitter_tests.py  vector_db_tests.py
